--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.google.gms:google-services:4.0.0'
+        classpath 'io.fabric.tools:gradle:1.26.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +24,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        maven {
+            url 'https://maven.google.com/'
+        }
+
     }
 }
 
